scrolling page on mobile screen and small screen fixed

--- a/css/stitched.css
+++ b/css/stitched.css
@@ -21,6 +21,18 @@
 body{
     font-family: 'Nexa';
 }
+html, 
+body {
+    overflow-x: hidden;
+	overflow: -moz-scrollbars-none;
+	width:100%;
+	-ms-overflow-style: none;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+			position:relative;
+}
+body::-webkit-scrollbar { width: 0 !important }
 .nopad{
     padding:0;
 }
